Name:                ghc-dup
Version:             0.1
Synopsis:            TODO
Description:
  TODO
  .
  The work on this package has been supported by the Deutsche Telekom Stiftung
  (<http://telekom-stiftung.de>).
License:             BSD3
License-file:        LICENSE
Author:              Joachim Breitner
Maintainer:          Joachim Breitner <mail@joachim-breitner.de>
Copyright:           2012 Joachim Breitner
Category:            Debug, GHC
Build-type:          Simple
Cabal-version:       >=1.14
--Extra-source-files:  Demo.hs

--Flag prim-supports-any
--    Description: The used GHC supports Any as an argument to foreign prim functions (GHC ticket #5931)
--    Default: False

Library
  Exposed-modules: Dup
  Default-Language:    Haskell2010
  Build-depends:
    base == 4.5.*,
    ghc
  C-Sources: dup.c dup-prim.cmm
--  Hs-source-dirs: src/
  Ghc-options: -Wall

--  if flag(prim-supports-any)
--    cpp-options: -DPRIM_SUPPORTS_ANY
  
source-repository head
  type:     darcs
  location: http://darcs.nomeata.de/ghc-dup/
